--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,25 @@
-name: main
-on: push
+name: CI Hexlet course
+on:
+  push:
+    branches:
+      - main
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4	
-	- run: make setup
- 	- run: make test
-  	- run: make lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm install
+      - name: Build app
+        run: npm run build
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Run tests
+        run: npm test
