--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,9 @@ jobs:
     steps:
       - name: Run tests
         run: npm test
+  lint:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Run linter
+        run: npm run lint      
