--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
+      - name: Install dependencies
+        run: npm install
+      - name: Build app
+        run: npm run build
   test:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run tests
-        run: npm test
+        run: npm test --package /package.json
   lint:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run linter
-        run: npm run lint      
+        run: npm run lint --package /package.json
