--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: CI Hexlet course
+
 on:
   push:
     branches:
       - main
+
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -13,8 +15,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
-      - name: Install dependencies
-        run: npm install
       - name: Build app
         run: npm run build
   test:
@@ -22,10 +22,10 @@ jobs:
     needs: setup
     steps:
       - name: Run tests
-        run: npm test --package /package.json
+        run: npm test
   lint:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run linter
-        run: npm run lint --package /package.json
+        run: npm run lint
