--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: CI Hexlet course
-
 on:
   push:
     branches:
       - main
-
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -15,17 +13,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
+      - name: Install dependencies
+        run: npm install
       - name: Build app
-        run: npm run build
+        run: make setup
   test:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run tests
-        run: npm test
+        run: make test
   lint:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run linter
-        run: npm run lint
+        run: make lint
