--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build app
-        run: make setup
+        run: npm make setup
   test:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run tests
-        run: make test
+        run: npm make test
   lint:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Run linter
-        run: make lint
+        run: npm make lint
