--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,28 +4,20 @@ on:
     branches:
       - main
 jobs:
-  setup:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-      - name: Install dependencies
-        run: npm install
-      - name: Build app
-        run: npm make setup
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
+
+      - name: Build application
+        run: npm run build
+
+      - name: Start application
+        run: npm start
+
       - name: Run tests
-        run: npm make test
-  lint:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
+        run: npm test
+
       - name: Run linter
-        run: npm make lint
+        run: npx eslint .
